added some more html and styling to the resources section.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Kandel's bank</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="styles.css" rel="stylesheet">
+    <link rel="shortcut icon" href="pointlessbinary.jpg">
+    <script type="text/javascript" src=app.js defer></script>
 </head>
 <body>
-<h2>Hello there</h2>
+    <header>
+        <h1>
+            Kandel's Bank
+        </h1>
+        <nav>
+            <a href='#'>Home</a>
+            <a href='#'>Projects</a>
+            <a href='#'>Links</a>
+        </nav>
+    </header>
 </body>
 </html>
