--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
         </h1>
         <nav>
             <a href='#'>Home</a>
-            <a href='#'>Projects</a>
+            <a href='#'>Accounts</a>
             <a href='#'>Links</a>
         </nav>
     </header>
